exports[`test Child node 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: content 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: disabled url -- dark theme 1`] = `
"<div class=\"pe-list-tile pe-list-tile--disabled\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: disabled url 1`] = `
"<div class=\"pe-list-tile pe-list-tile--disabled\">
  <a href=\"#!/\" style=\"\" class=\"pe-list-tile__primary\">
  <div class=\"pe-list-tile__content\">
    <div class=\"pe-list-tile__title\">
      Ancillary Justice
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: events 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Click me
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: front (avatar) 1`] = `
"<div class=\"pe-list-tile pe-list-tile--front\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: front (icon) 1`] = `
"<div class=\"pe-list-tile pe-list-tile--front\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: highSubtitle 1`] = `
"<div class=\"pe-list-tile pe-list-tile--high-subtitle\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
      <div class=
      \"pe-list-tile__subtitle pe-list-tile__high-subtitle\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: highSubtitle and compact 1`] = `
"<div class=
\"pe-list-tile pe-list-tile--compact pe-list-tile--high-subtitle\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
      <div class=
      \"pe-list-tile__subtitle pe-list-tile__high-subtitle\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: highSubtitle and front -- dark theme 1`] = `
"<div class=\"pe-list-tile pe-list-tile--high-subtitle\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
      <div class=
      \"pe-list-tile__subtitle pe-list-tile__high-subtitle\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div><a href=\"#!/\" class=\"pe-list-tile__secondary\">
  <div class=\"pe-list-tile__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: highSubtitle and front 1`] = `
"<div class=\"pe-list-tile pe-list-tile--high-subtitle\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
      <div class=
      \"pe-list-tile__subtitle pe-list-tile__high-subtitle\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div><a href=\"#!/\" class=\"pe-list-tile__secondary\">
  <div class=\"pe-list-tile__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: hoverable 1`] = `
"<div class=\"pe-list-tile pe-list-tile--hoverable\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: href 1`] = `
"<div class=\"pe-list-tile\">
  <a href=\"#!/\" style=\"\" class=\"pe-list-tile__primary\">
  <div class=\"pe-list-tile__content\">
    <div class=\"pe-list-tile__title\">
      Ancillary Justice
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: indent 1`] = `
"<div class=\"pe-list-tile pe-list-tile--front\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\"></div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: ink 1`] = `
"<div class=\"pe-list-tile\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: ink with ripple options 1`] = `
"<div class=\"pe-list-tile\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: secondary (content) 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile__secondary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: secondary (icon) 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile__secondary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: secondary (url) 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div><a href=\"#!/\" class=\"pe-list-tile__secondary\">
  <div class=\"pe-list-tile__content\">
    <div class=\"pe-icon pe-icon--medium\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
          </path>
        </svg>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: selectable 1`] = `
"<div class=\"pe-list-tile pe-list-tile--selectable\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: selected 1`] = `
"<div class=\"pe-list-tile pe-list-tile--selected\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: subtitle 1`] = `
"<div class=\"pe-list-tile pe-list-tile--subtitle\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
      <div class=\"pe-list-tile__subtitle\">
        The body lay naked and facedown, a deathly gray, spatters
        of blood staining the snow around it. It was minus fifteen
        degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: title 1`] = `
"<div class=\"pe-list-tile\">
  <div style=\"\" class=\"pe-list-tile__primary\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Themed (color and font size) -- dark theme 1`] = `
"<div class=
\"pe-list-tile pe-list-tile--front tests-list-tile-themed-list-tile\">
<div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Themed (color and font size) 1`] = `
"<div class=
\"pe-list-tile pe-list-tile--front tests-list-tile-themed-list-tile\">
<div style=\"\" class=\"pe-list-tile__primary\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
          height=\"24\" viewbox=\"0 0 24 24\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
"
`;
